--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -36,7 +36,7 @@
 # Subjective SES Articles 
 
 @article{adler1994socioeconomic,
-  title={Socioeconomic status and health: the challenge of the gradient.},
+  title={Socioeconomic status and health: the challenge of the gradient},
   author={Adler, Nancy E and Boyce, Thomas and Chesney, Margaret A and Cohen, Sheldon and Folkman, Susan and Kahn, Robert L and Syme, S Leonard},
   journal={American psychologist},
   volume={49},
