--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -1,3 +1,25 @@
+# CINT Substances 
+
+@article{rhoades2014drug,
+  title={Drug use trajectories after a randomized controlled trial of MTFC: Associations with partner drug use},
+  author={Rhoades, Kimberly A and Leve, Leslie D and Harold, Gordon T and Kim, Hyoun K and Chamberlain, Patricia},
+  journal={Journal of Research on Adolescence},
+  volume={24},
+  number={1},
+  pages={40--54},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@incollection{sobell1992timeline,
+  title={Timeline follow-back: A technique for assessing self-reported alcohol consumption},
+  author={Sobell, Linda C and Sobell, Mark B},
+  booktitle={Measuring alcohol consumption: Psychosocial and biochemical methods},
+  pages={41--72},
+  year={1992},
+  publisher={Springer}
+}
+
 # CESD Articles
 
 @article{radloff1977ces,
